--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "tw-elements": "^2.0.0"
   },
   "scripts": {
-    "dev": "npx @tailwindcss/cli -i ./src/tailwindcss/style.css -o ./assets/css/index.css --watch"
+  "dev": "npx tailwindcss -c ./tailwind.config.js -i ./src/tailwindcss/style.css -o ./assets/css/index.css --watch"
   }
 }
